Add tests for ticket closing history